--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -18,6 +19,7 @@
     "next": "15.2.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
   },
@@ -28,6 +30,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
     "@types/react-icons": "^3.0.0",
     "eslint": "^9",
