--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bcryptjs": "^3.0.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.484.0",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.12.1",
     "next": "15.2.3",
     "nodemailer": "^6.10.0",
